--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,8 +40,10 @@ header{
     list-style-type: none;
     height: 50px;
     display: flex;
-    justify-content: space-around;
+    margin: auto;
+    justify-content: space-between;
     align-items: center;
+    padding: 0px 10px;
 }
 
 .header__menu li a{
@@ -100,8 +102,9 @@ header{
 .banner__general a{
     color: rgb(119, 119, 119);
     background-color: rgba(104, 104, 104, 0.226);
-    padding: 15px;
+    padding: 12px;
     font-size: 13px;
+    text-decoration: none;
 }
 
 /* texto */
