ver mas y algunos margins

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -88,6 +88,7 @@ header{
     padding: 1rem;
     text-align: center;
     font-weight: bold;
+    margin-top: 20px;
 
 }
 
@@ -99,12 +100,15 @@ header{
     font-weight: 300;
 }
 
+/* ver mas */
+
 .banner__general a{
     color: rgb(119, 119, 119);
     background-color: rgba(104, 104, 104, 0.226);
     padding: 12px;
     font-size: 13px;
     text-decoration: none;
+    margin-bottom: 25px;
 }
 
 /* texto */
@@ -136,6 +140,8 @@ header{
     font-weight: bold;
     background-color: rgba(2, 2, 2, 0.486);
     padding: 0.5rem;
+    max-width: 400px;
+    margin: 0 auto;
 }    
 
 .banner__general div h2{
