--- a/css/estilos.css
+++ b/css/estilos.css
@@ -73,7 +73,7 @@ header{
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 270px;
+    height: 350px;
     background-color: rgb(37, 37, 37);
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
@@ -89,7 +89,14 @@ header{
     text-align: center;
     font-weight: bold;
     margin-top: 20px;
+}
 
+.monedas__logos img{
+    width: 320px;
+    max-width: 700px;
+    display: block;
+    margin: auto;
+    padding: 20px 20px;
 }
 
 .aprende{
@@ -109,6 +116,11 @@ header{
     font-size: 13px;
     text-decoration: none;
     margin-bottom: 25px;
+    transition: all 1s ease;
+}
+
+.banner__general a:hover{
+    background-color: rgba(255, 255, 255, 0.678);
 }
 
 /* texto */
@@ -126,6 +138,10 @@ header{
     color: rgb(163, 115, 61);
     padding: 5px;
 }
+
+/* que necesitas para invertir? */
+
+
 
 .pregunta{
     font-size: 30px;
