--- a/css/estilos.css
+++ b/css/estilos.css
@@ -85,18 +85,25 @@ header{
     font-size: 30px;
     width: 100%;
     max-width: 470px;
-    padding: 1rem;
+    padding: 1rem 1rem;
     text-align: center;
     font-weight: bold;
     margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.banner__general > .monedas__logos{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .monedas__logos img{
-    width: 320px;
-    max-width: 700px;
-    display: block;
+    width: 100%;
+    max-width: 500px;
     margin: auto;
-    padding: 20px 20px;
+
 }
 
 .aprende{
@@ -105,6 +112,9 @@ header{
     padding: 1rem;
     text-align: center;
     font-weight: 300;
+    max-width: 300px;
+    justify-content: center;
+    margin: auto;
 }
 
 /* ver mas */
@@ -204,7 +214,8 @@ footer{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, .3);
 }
 
